--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
+{
+  "name": "tometa-ocr",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1"
+  }
+}
 
