--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,6 @@ services:
     plan: free
     buildCommand: |
       apt-get update
-      apt-get install -y tesseract-ocr tesseract-ocr-tur tesseract-ocr-eng poppler-utils
+      apt-get install -y tesseract-ocr tesseract-ocr-tur tesseract-ocr-eng poppler-utils libvips-dev
       npm install
     startCommand: node index.js
