--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.6",
-    "docx": "^8.5.0"
+    "docx": "^8.5.0",
+    "pdf-parse": "^1.1.1"
   }
 }
