--- a/render.yaml
+++ b/render.yaml
@@ -4,3 +4,6 @@ services:
     env: docker
     plan: free
     region: frankfurt
+    # Paneldeki kutucukları geçersiz kılmak için bunları ekliyoruz:
+    buildCommand: null
+    startCommand: null
